@startuml "Aplikasi DosenNotif - ViewModel"
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam ArrowColor #666666

package "com.example.dosennotif.viewmodel" #F9E4D5 {
  class CalendarViewModel {
    - repository: ScheduleRepository
    - firestore: FirebaseFirestore
    - auth: FirebaseAuth
    + schedulesByDay: LiveData<Map<String, List<Schedule>>>
    + loadUserData()
    + loadSchedules(nidn: String, period: String)
    + selectPeriod(period: String)
  }

  class HomeViewModel {
    - repository: ScheduleRepository
    - firestore: FirebaseFirestore
    + distanceFromCampus: LiveData<Float>
    + userData: LiveData<User?>
    + todaySchedules: LiveData<List<Schedule>>
    + loadUserData()
    + loadSchedules(nidn: String, period: String)
    + updateCurrentLocation(location: Location)
  }

  class NotificationViewModel {
    - repository: ScheduleRepository
    - auth: FirebaseAuth
    + notificationsState: StateFlow<Resource<List<ScheduleNotification>>>
    + selectedNotification: LiveData<ScheduleNotification?>
    + loadNotifications()
    + getNotificationById(notificationId: String)
    + markNotificationAsRead(notificationId: String)
  }

  class ProfileViewModel {
    - firestore: FirebaseFirestore
    - auth: FirebaseAuth
    + userData: LiveData<User?>
    + savingState: LiveData<Resource<Unit>>
    + loadUserData()
    + updateNotificationPreferences(preferences: NotificationPreferences)
    + signOut()
  }
}

package "com.example.dosennotif.repository" #D5E8F9 {
  class ScheduleRepository
}

package "com.example.dosennotif.model" #DEEBD8 {
  class User
  class Schedule
  class ScheduleNotification
  class NotificationPreferences
}

' Relasi
CalendarViewModel --> ScheduleRepository: uses
HomeViewModel --> ScheduleRepository: uses
NotificationViewModel --> ScheduleRepository: uses
ProfileViewModel --> User: manages

CalendarViewModel ..> Schedule: manages
HomeViewModel ..> Schedule: manages
NotificationViewModel ..> ScheduleNotification: manages
ProfileViewModel ..> NotificationPreferences: manages

@enduml